# reaction-embeddings

./: .gitattributes  .gitignore  AGENTS.embedding.md  CONTRIBUTING.md  README.md  agent.md  output.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
artifacts/: README.md
configs/data/: phase2_rhea.yaml  rhea_phase1.yaml
configs/export/: phase2_mvp.yaml  phase2_v2_full_ecaux0.yaml  phase2_v2_pilot.yaml  phase2_v2_pilot_ecaux0.yaml
configs/model/: phase2_mvp.yaml  phase2_structure_only.yaml
configs/train/: phase2_mvp_cpu.yaml  phase2_v2_full_ecaux0_cpu.yaml  phase2_v2_pilot_cpu.yaml  phase2_v2_pilot_ecaux0_cpu.yaml
data/: README.md
data/manifests/: phase2_embedding_manifest.json  phase2_v2_full_ecaux0_embedding_manifest.json  phase2_v2_pilot_ecaux0_embedding_manifest.json  phase2_v2_pilot_embedding_manifest.json  rhea_release_141_manifest.json
docs/: data_decisions.md  embedding_results_summary.md  phase2_pilot.md
schemas/: direction_variant.schema.json  reaction.schema.json
scripts/: analyze_embedding_quality.py  audit_phase2_v2_inputs.py  compare_ec_aux_ablation.py  diagnose_duplicate_embeddings.py  export_phase2.py  prepare_rhea.py  run_ec_aux_ablation.ps1  run_phase1.ps1  run_phase2.ps1  run_phase2_v2_full.ps1  run_phase2_v2_pilot.ps1  trace_encoder_collisions.py  trace_fusion_collisions.py  train_phase2.py  validate_embedding_quality_report.py  validate_phase1.py  validate_phase2.py  validate_phase2_v2.py
src/rhea_embedding/: __init__.py
src/rhea_embedding/chemistry/: __init__.py  (+1 more)
tests/: test_phase2.py  test_prepare_rhea.py
(+9 files in other folders)
